--- a/app/assets/stylesheets/base/_reset.scss
+++ b/app/assets/stylesheets/base/_reset.scss
@@ -63,10 +63,17 @@ a {
 // ============================================
 
 .main {
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
+    max-width: $container-max-width;
+    margin: 16px auto;
+    padding: $container-padding;
     background-color: $color-bg-content;
     border: 1px solid $color-border-light;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+
+    @media (max-width: $container-max-width) {
+        margin: 0;
+        border-left: none;
+        border-right: none;
+        box-shadow: none;
+    }
 }
