--- a/app/assets/stylesheets/components/_difficulty.scss
+++ b/app/assets/stylesheets/components/_difficulty.scss
@@ -19,10 +19,10 @@
     }
 
     &__grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        display: flex;
+        flex-direction: column;
         gap: 20px;
-        max-width: 1000px;
+        max-width: 100%;
         margin: 0 auto;
     }
 }
