--- a/app/assets/stylesheets/components/_newsfeed.scss
+++ b/app/assets/stylesheets/components/_newsfeed.scss
@@ -8,11 +8,16 @@
     gap: 0.5rem;
     margin-bottom: 2rem;
     flex-wrap: wrap;
+
+    @media (max-width: $breakpoint-small) {
+        gap: 0.25rem;
+        margin-bottom: 1rem;
+    }
 }
 
 // Newsfeed Container
 .newsfeed {
-    max-width: 900px;
+    max-width: 100%;
     margin: 0 auto;
 
     &__day {
