--- a/app/assets/stylesheets/components/_page.scss
+++ b/app/assets/stylesheets/components/_page.scss
@@ -35,7 +35,7 @@
 // ============================================
 
 .page {
-    max-width: 720px;
+    max-width: 100%;
     margin: 0 auto;
     font-size: 14px;
 
