--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <div class="header__container">
         <div class="header__brand">
           <div class="header__brand-top">
-            <span class="header__logo">Arbitrage</span>
+            <span class="header__logo">Arbitrage<% if current_game %> <%= current_game.current_location.name %><% end %></span>
             <span class="header__tagline">&nbsp;- buy low, sell high</span>
           </div>
           <% if current_game %>
