Buddy tests, marketplace mobile friendly design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,5 @@
 @import "components/page";
 @import "components/footer";
 @import "components/leaderboard";
+@import "components/marketplace";
+@import "components/inventory";
